--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-#Update all the sections by editing the data.yml file inside _data folder.
+#Update all the sections by editing the data.yml file inside _configs folder.
 
 # Site Settings
 title: My Resume
@@ -9,12 +9,17 @@ description: A beautiful Jekyll theme for creating resume
 theme_skin: blue # blue turquoise green berry orange ceramic
 chrome_mobile_color: #use hex colors (ex:#1976d2) or leave empty if you don't want a color for chrome mobile searchbar
 
+source: ./site
+destination: ./target
+
+data_dir: _configs
+
 # Tracker
 analytics: UA-83979019-1
 
 # Sass/SCSS
 sass:
-  sass_dir: _sass
+  sass_dir: _themes
   style: compressed # http://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
 
 # Build settings
