Personalise and clean-up the config file.

--- a/config.yml
+++ b/config.yml
@@ -1,27 +1,26 @@
-#Update all the sections by editing the yml files inside the _configs folder.
-
 # Site Settings
 title: My Resume
 url: 'http://webjeda.com'
-baseurl: '/online-cv' #change it according to your repository name
 description: A beautiful Jekyll theme for creating resume
-# Style will be applied only after restarting the build or serve. Just choose one of the options.
-theme_skin: blue # blue turquoise green berry orange ceramic
-chrome_mobile_color: #use hex colors (ex:#1976d2) or leave empty if you don't want a color for chrome mobile searchbar
 
+# Theme Settings
+theme_skin: blue
+
+# Layout Settings
 source: ./site
 destination: ./target
 
 data_dir: _configs
+includes_dir: _includes
+layouts_dir: _layouts
 
-# Sass/SCSS
 sass:
   sass_dir: _themes
 
 # Build settings
-encoding: "utf-8"
+encoding: 'utf-8'
 
 # Development Settings
-port: 4000
-host: 0.0.0.0
-safe: false
+port: 3000
+host: 127.0.0.1
+safe: true
